Actions
Bug #10373
closedvm_anon: cast between incompatible function types
Start date:
2019-02-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error from gcc 8:
../../common/vm/vm_anon.c:1276:10: error: cast between incompatible function types from 'void (*)(struct vnode *, page_t *, int, int, struct cred *, caller_context_t *)' {aka 'void (*)(struct vnode *, struct page *, int, int, struct cred *, struct caller_context *)'} to 'int (*)()' [-Werror=cast-function-type] (fs_generic_func_p)fs_dispose)) ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7e897d1fc847b22dc338da9a5a59dae0cd8765de
commit 7e897d1fc847b22dc338da9a5a59dae0cd8765de Author: Toomas Soome <tsoome@me.com> Date: 2019-02-20T20:00:45.000Z 10373 vm_anon: cast between incompatible function types Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions